<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/app_name"
    app:startDestination="@+id/firstFragment">


    <fragment
        android:id="@+id/firstFragment"
        android:name="com.example.android70_ex04.beer.AsahiFragment"
        android:label="@string/asahi"
        tools:layout="@layout/fragment_asahi" />

    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.android70_ex04.beer.CassFragment"
        android:label="@string/cass"
        tools:layout="@layout/fragment_cass" />
    <fragment
        android:id="@+id/thirdFragment"
        android:name="com.example.android70_ex04.beer.TerraFragment"
        android:label="@string/terra"
        tools:layout="@layout/fragment_terra" />
</navigation>