<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_black"
    tools:context=".SignUpFragment">

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/shimmerTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/logo_orange"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:reflectionColor="@color/logo_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/edit_text_select_color"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/white"
        app:errorTextColor="#FF0000"
        app:hintTextColor="@color/logo_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shimmerTitleTextView"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/edit_text_select_color"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/white"
        app:errorTextColor="#FF0000"
        app:hintTextColor="@color/logo_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameTextInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameTextInputLayout"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="password"
        android:inputType="numberPassword"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddressEditText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/reEnterPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/completeButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/signup_button_border_square"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/complete"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="100dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>